# DirectXShaderCompiler

./: draw_triangle_list.hlsl  draw_triangle_list.ps.dxil  draw_triangle_list.ps.ll  draw_triangle_list.ps.noopt.ll  issue.hlsl  setup.bat  unstruct.hlsl  unstruct.ll
docs/: SPIR-V.rst
include/dxc/HLSL/: DxilGenerationPass.h
lib/HLSL/: CMakeLists.txt  SpirvGen.cpp
lib/Support/: CommandLine.cpp
tools/clang/include/clang/SPIRV/: SpirvBuilder2.h
tools/clang/lib/SPIRV/: CMakeLists.txt  CapabilityVisitor.cpp  EmitVisitor.cpp  EmitVisitor2.cpp  EmitVisitor2.h  LowerTypeVisitor.cpp  SpirvBuilder2.cpp  SpirvEmitter.cpp  SpirvEmitter.h
tools/clang/lib/Sema/: SemaHLSL.cpp
tools/clang/test/CodeGenSPIRV/: attribute.outputcontrolpoints.zero.hlsl  cf.switch.opswitch.hlsl
tools/clang/test/HLSLFileCheck/hlsl/entry/attributes/: WaveSizeAttrAllowed1.hlsl
tools/clang/tools/: CMakeLists.txt
tools/clang/tools/dxclib/: dxc.cpp
tools/clang/tools/dxil2spv/: CMakeLists.txt  dxil2spv.rc  main.cpp
utils/hct/: hctdb.py
